tests/src/frontend/typechecking/exhaustiveness/invalid/exhaustive_pattern5.sk
base class Foo

class Bar() extends Foo
class Baz() extends Foo

fun main(): void {
  foo: Foo = Baz();
  print_raw(
    foo match {
    | Bar() -> "Fail"
    },
  )
}
